--- a/package.json
+++ b/package.json
@@ -20,7 +20,9 @@
     "@angular/platform-browser-dynamic": "~9.1.4",
     "@angular/router": "~9.1.4",
     "@popperjs/core": "^2.4.2",
+    "bootstrap": "^4.5.0",
     "chart.js": "^2.9.3",
+    "jquery": "^3.5.1",
     "ngx-popper": "^7.0.0",
     "popper.js": "^1.14.3",
     "rxjs": "~6.5.4",
