--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "bootstrap": "^4.5.0",
     "chart.js": "^2.9.3",
     "jquery": "^3.5.1",
+    "ng2-charts": "^2.3.2",
     "ngx-popper": "^7.0.0",
     "popper.js": "^1.14.3",
     "rxjs": "~6.5.4",
