--- a/angular.json
+++ b/angular.json
@@ -29,6 +29,7 @@
             ],
             "styles": [
               "./node_modules/bootstrap/dist/css/bootstrap.min.css",
+              "./node_modules/chart.js/dist/chart.min.css",
               "src/styles.less"
             ],
             "scripts": [
